MODON MRE BPDEV/force-app/main/default/objects/SystemConfiguration__mdt/SystemConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>SystemConfiguration</label>
    <pluralLabel>SystemConfigurations</pluralLabel>
</CustomObject>