MODON MRE BPDEV/force-app/main/default/objects/SystemConfiguration__mdt/fields/IsRunAfterInsert__c.field-meta.xml
<CustomField>
    <fullName>IsRunAfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRunAfterInsert</label>
    <type>Checkbox</type>
</CustomField>