MODON MRE BPDEV/force-app/main/default/objects/SystemConfiguration__mdt/fields/IsRunAfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsRunAfterUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRunAfterUpdate</label>
    <type>Checkbox</type>
</CustomField>