MODON MRE BPDEV/force-app/main/default/objects/SystemConfiguration__mdt/fields/IsRunBeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>IsRunBeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRunBeforeInsert</label>
    <type>Checkbox</type>
</CustomField>