MODON MRE BPDEV/force-app/main/default/objects/SystemConfiguration__mdt/fields/IsRunBeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsRunBeforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRunBeforeUpdate</label>
    <type>Checkbox</type>
</CustomField>