MODON MRE BPDEV/force-app/main/default/objects/SystemConfiguration__mdt/fields/IsRunTrigger__c.field-meta.xml
<CustomField>
    <fullName>IsRunTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRunTrigger</label>
    <type>Checkbox</type>
</CustomField>